kuber/kube/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-http-server
  labels:
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/component: web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/component: web
