kuber/kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-http-server
  labels:
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/component: web
spec:
  rules:
    - host: simple-http-server.celestiv-http-server.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-http-server
                port:
                  name: http
